[package]
name = "zombie-ball-pit"
version = "0.1.0"
authors = ["ashneverdawn <ashneverdawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15", features = ["metal", "gltf"] }
amethyst-imgui = { version = "0.7", features = ["metal"] }
amethyst_physics = { version = "0.2.0" }
amethyst_nphysics = { version = "0.2.0" }
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4"
rand = "0.7.3"
genmesh = "0.6.2"
derive-new = "0.5"